highlight disabled strategies in report
(cherry picked from commit 57176cb14472f3edd51175d7e6de1c5687b0382a)